# CppOverride

./: .clangd  .gitignore  .gitmodules  404.html  CMakeLists.txt  Example.cpp  GenerateCppOverrideSingleHeader.sh  Jenkinsfile  LICENSE  README.md  TODO.md  TestScript.sh  index.html  logo.html  pipeline.gocd.yaml
.github/workflows/: ci.yml
CI/: CppOverrideArtifacts.gocd.yaml  CppOverrideMain.gocd.yaml  CppOverrideMainTrigger.gocd.yaml  CppOverridePR_Trigger.gocd.yaml
Include_MultiHeaders/: AliasTypes.hpp  Any.hpp  ArgsDataActionInfo.hpp  ArgsInfo.hpp  ConditionInfo.hpp  CppOverride.hpp  CppOverrideInstance.hpp  DataInfo.hpp  EarlyReturn.hpp  Internal_ActionInfo.hpp  Internal_ArgsChecker.hpp  Internal_ArgsDataActionInfo.hpp  Internal_ArgsDataRetriever.hpp  Internal_ArgsDataSetter.hpp  Internal_ArgsModifier.hpp  Internal_ArgsTypeInfoAppender.hpp  Internal_ArgsTypesChecker.hpp  Internal_ArgsValuesAppender.hpp  Internal_ArgsValuesChecker.hpp  Internal_ConditionInfo.hpp  Internal_DataInfo.hpp  Internal_OverrideArgsData.hpp  Internal_OverrideArgsDataList.hpp  Internal_OverrideData.hpp  Internal_OverrideReturnData.hpp  Internal_OverrideReturnDataList.hpp  Internal_RequirementSetter.hpp  Internal_ResultActionInfo.hpp  Internal_ReturnDataActionInfo.hpp  Internal_ReturnDataInfo.hpp  Internal_ReturnDataRetriever.hpp  Internal_ReturnDataSetter.hpp  IsSimpleSTLContainer.hpp  Macros.hpp  OverrideData.hpp  OverrideInfoSetterDeclaration.hpp  OverrideInfoSetterImplementation.hpp  OverrideResult.hpp  OverrideStatus.hpp  ProxiesDeclarations.hpp  (+12 more)
Include_MultiHeaders/Old/: ArgsInfo.hpp  Internal_OverrideArgsData.hpp  Internal_OverrideArgsDataList.hpp  Internal_OverrideReturnData.hpp  ProxiesDeclarations.hpp  ProxiesImplementations.hpp
Include_MultiHeaders/OverriderComponents/: ArgsDataSetter.hpp  ArgsDataValidator.hpp  ArgsModifier.hpp  ArgsTypeInfoAppender.hpp  ArgsValuesAppender.hpp  ConditionArgsTypesChecker.hpp  ConditionArgsValuesChecker.hpp  Internal_ArgsDataRetriever.hpp  Internal_ArgsDataSetter.hpp  Internal_ArgsDataValidator.hpp  Internal_ArgsModifier.hpp  Internal_ArgsTypeInfoAppender.hpp  Internal_ArgsTypesChecker.hpp  Internal_ArgsValuesAppender.hpp  Internal_ArgsValuesChecker.hpp  Internal_ConditionArgsTypesChecker.hpp  Internal_ConditionArgsValuesChecker.hpp  Internal_RequirementSetter.hpp  Internal_RequirementValidator.hpp  Internal_ReturnDataRetriever.hpp  Internal_ReturnDataSetter.hpp  Internal_ReturnDataValidator.hpp  RequirementSetter.hpp  RequirementValidator.hpp  ReturnDataSetter.hpp  ReturnDataValidator.hpp
Include_MultiHeaders/OverriderComponents/Old/: Internal_ArgsDataRetriever.hpp
Include_SingleHeader/: CppOverride.hpp  SimpleOverride.hpp
Scripts/: GenerateMockClass.cpp  GenerateSingleHeader.cpp
Tests/: ArrayParamTests.cpp  ClassFunctions.hpp  FileFunctions.hpp  FreeFunctionTests.cpp  GlobalInstanceMockShapesTests.cpp  IfTests.cpp  MixedModifyArgsAndReturnsTest.cpp  MockShapesTests.cpp  ModifyArgsTests.cpp  ModifyReturnsTests.cpp  Otherwise_DoTests.cpp  RunAllTests.bat  RunAllTests.sh  TimesTests.cpp  WhenCalledExpectedly_DoTests.cpp  WhenCalledWithTests.cpp
Tests/Components/: ComplexArg.hpp  ComplexClass.hpp  DummyClass.hpp  FileFunctions.hpp  FreeFunctions.cpp  FreeFunctions.hpp  GlobalInstanceMockShapes.hpp  MockFreeFunctions.cpp  MockFreeFunctions.hpp  MockShapes.hpp  MockShapes.hpp.bak  NonComparableTestClass.hpp  NonCopyableTestClass.hpp  Shapes.hpp  TestClasses.hpp
Tests/Components/Old/: DummyClass.hpp
Tests/Legacy/: SimpleOverrideTests.cpp
getting_started/: index.html
insert_overrides/: index.html
inspect_overrides/: index.html
instruct_overrides/: index.html
latest/: 404.html  index.html
latest/example/: index.html
latest/getting_started/: index.html
latest/insert_overrides/: index.html
latest/inspect_overrides/: index.html
latest/instruct_overrides/: index.html
latest/mock_class_generator/: index.html
latest/override_external/: index.html
latest/search/: search_index.json
mkdocs/: mkdocs.yml
mkdocs/Src/: Example.cpp  OverrideResult.hpp  OverrideStatus.hpp  TypedDataInfo.hpp  TypedInfo.hpp
mkdocs/docs/: example.md  extra.css  getting_started.md  index.md  insert_overrides.md  inspect_overrides.md  instruct_overrides.md  mock_class_generator.md  override_external.md
mkdocs/overrides/: main.html
mock_class_generator/: index.html
override_external/: index.html
search/: search_index.json
v1/: 404.html  index.html
